--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "main": "src/index.js",
   "scripts": {
     "start": "node src/index.js",
-    "dev": "nodemon src/index.js"
+    "dev": "nodemon src/index.js",
+    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js"
   },
   "dependencies": {
     "dotenv": "^16.4.7",
@@ -15,6 +16,11 @@
     "winston": "^3.17.0"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1"
+    "@babel/core": "^7.26.0",
+    "babel-jest": "^29.7.0",
+    "nodemon": "^3.0.1",
+    "jest": "^29.0.0",
+    "supertest": "^6.0.0",
+    "@babel/preset-env": "^7.0.0"
   }
 }
