--- a/package.json
+++ b/package.json
@@ -3,24 +3,27 @@
   "version": "1.0.0",
   "description": "A simple user microservice using PostgreSQL",
   "type": "module",
-  "main": "src/index.js",
+  "main": "src/server.js",
   "scripts": {
-    "start": "node src/index.js",
-    "dev": "nodemon src/index.js",
+    "start": "node src/swagger.js && node src/server.js",
+    "dev": "node src/swagger.js && nodemon src/server.js",
     "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.18.2",
     "pg": "^8.9.0",
+    "swagger-autogen": "^2.23.7",
+    "swagger-ui-express": "^5.0.1",
     "winston": "^3.17.0"
   },
   "devDependencies": {
     "@babel/core": "^7.26.0",
+    "@babel/preset-env": "^7.0.0",
     "babel-jest": "^29.7.0",
-    "nodemon": "^3.0.1",
     "jest": "^29.0.0",
-    "supertest": "^6.0.0",
-    "@babel/preset-env": "^7.0.0"
+    "nodemon": "^3.0.1",
+    "supertest": "^6.0.0"
   }
 }
