--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "start": "node src/swagger.js && node src/server.js",
     "dev": "node src/swagger.js && nodemon src/server.js",
-    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js"
+    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
+    "coverage": "npm test --coverage"
   },
   "dependencies": {
     "cors": "^2.8.5",
