--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "main": "src/server.js",
   "scripts": {
+    "build": "node build.js",
     "start": "node src/swagger.js && node src/server.js",
     "dev": "node src/swagger.js && nodemon src/server.js",
     "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
@@ -23,6 +24,9 @@
     "@babel/core": "^7.26.0",
     "@babel/preset-env": "^7.0.0",
     "babel-jest": "^29.7.0",
+    "esbuild": "^0.24.2",
+    "esbuild-node-externals": "^1.16.0",
+    "esbuild-plugin-copy": "^2.1.1",
     "jest": "^29.0.0",
     "nodemon": "^3.0.1",
     "supertest": "^6.0.0"
